<resources>
    <string name="app_name">Sesyme</string>
    <string name="hello_blank_fragment">Hello this is a Fragment</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="gender">Gender</string>
    <string name="add_date">Coose a Date</string>
    <string name="change_password">Forgot Password?</string>
    <string name="please_choose_your_interests">Please Choose your interests!</string>
    <string name="Poetry">Arts</string>
    <string name="Business">Business</string>
    <string name="Self_help">Human Science</string>
    <string name="Sci_Fi">Chemistry</string>
    <string name="Biographies">Education</string>
    <string name="Romance">Health</string>
    <string name="Lifestyle">Economics</string>
    <string name="NonFiction">Physics</string>
    <string name="Fiction">Law</string>
    <string name="Thriller">Computer Science</string>
    <string name="Classics">Engineering</string>
    <string name="Kids">Mathematics</string>
    <string name="interests_string">Please Choose at least three interests</string>
    <string name="next">Next</string>
    <string name="choose_what_interests_you">Choose what interests you</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_your_password">Forgot Your Password?</string>
    <string name="click_here">| Click Here</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="send">Send</string>
    <string name="email">Email</string>
    <string name="conditions_text">By Signing Up you agree all Terms and Conditions</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="hint_email">Email</string>
    <string name="forgot_password_msg">We need your Registered Email address to send reset password instructions</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out">Sign Out</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="sefnet">SEFNET</string>
    <string name="login">Login</string>
    <string name="or_login_with">or login with</string>
    <string name="library">Library</string>
    <string name="course">Course</string>
    <string name="biology">Biology</string>
    <string name="multimedia">Multimedia</string>
    <string name="accounting">Accounting</string>
    <string name="heading_of_the_question">Heading of the Question</string>
    <string name="likes">123</string>
    <string name="reviews">Reviews</string>
    <string name="title_of_the_book">Title of the Book</string>
    <string name="six_fifty_minutes">65 minutes</string>
    <string name="reading_time">Reading Time</string>
    <string name="name_of_publisher">Name of the Publishur</string>
    <string name="publisher">Publisher</string>
    <string name="publish_date">Publish Date</string>
    <string name="published">Published</string>
    <string name="number_of_pages">Number of pages</string>
    <string name="download">Download</string>
    <string name="add_library">Add to Library</string>
    <string name="rating">Rating</string>
    <string name="_124">124</string>
    <string name="author_innet">Author Name</string>
    <string name="post_review">Post Answer</string>
    <string name="write_record_a_review">Write/Recored an Answer</string>
    <string name="one">1</string>
    <string name="register">Register</string>
    <string name="recommended_books">Recommended Books</string>
    <string name="create_a_shelve">Create a Shelf</string>
    <string name="shelve_name">Shelf Name</string>
    <string name="make_it_public">Make it Public</string>
    <string name="anyone_can_view">Anyone can view it</string>
    <string name="make_it_private">Make it Private</string>
    <string name="only_you_can_view">Only you can view it</string>
    <string name="done">Done</string>
    <string name="see_all">Add a Book</string>
    <string name="privacy_public">Public</string>
    <string name="name_surname">Full Name</string>
    <string name="books_read">Books Read</string>
    <string name="zero">0</string>
    <string name="pages_read">Pages Read</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="manage_interests">Manage Interests</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="url_privacy">http://www.sesyme.com</string>
    <string name="title_terms">Terms &amp; Conditions</string>
    <string name="url_terms">http://www.sesyme.com</string>
    <string name="title_version">Version</string>
    <string name="choose_email_client">Choose email client</string>
    <string name="title_gallery_storage">Change Payment Options</string>
    <string name="title_new_notification_sound">New message notification</string>
    <string name="title_vibrate">Vibrate</string>
    <string name="summary_vibrate">Vibrate on new notification</string>
    <string name="key_upload_over_wifi">key_upload_over_wifi</string>
    <string name="key_upload_quality">key_upload_quality</string>
    <string name="notifications_new_message">notifications_new_message</string>
    <string name="key_notifications_new_message_ringtone">key_notifications_new_message_ringtone</string>
    <string name="key_vibrate">key_vibrate</string>
    <string name="key_send_feedback">key_send_feedback</string>
    <string name="title_activity_settings">Settings</string>
    <string name="url_faqs">https://www.payments.google.com/manage#paymentMethods</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="title_billing_subscription">Billing Subscription</string>
    <string name="summary_upload_over_wifi">Upload the videos when wifi is available</string>
    <string name="title_upload_quality">Upload Quality</string>
    <string name="summary_upload_video_quality">Specify video quality for uploads</string>
    <string name="pref_title_notifications">Notifications</string>
    <string name="summary_choose_ringtone">Choose notification sound</string>
    <string name="pref_header_about">About</string>
    <string name="summary_about">Sesyme is a co-learning application for university students built for the purpose to help students with their study-related questions and create an environment where students from different universities can co-learn, collaborate and share knowledge.</string>
    <string name="app_version">1.0.0</string>
    <string name="summary_support">Got any queries? We are happy to help!</string>
    <string name="title_send_feedback">Send Feedback</string>
    <string name="title_faq">FAQ</string>
    <string name="summary_faq">View frequently asked questions</string>
    <string name="url_faq">http://www.sefnet.co.za/terms&amp;conditions.php</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="report">Report</string>
    <string name="hide">Hide this post</string>
    <string name="search">Search</string>
    <string name="Likes">Likes</string>
    <string name="questions">Questions</string>
    <string name="answers">Answers</string>
    <string name="verify_email"><u>Click to verify your Email</u></string>
    <string name="feedback_text">We will respond via email to feedback and questions. You may also send feedback to <u>all@innet.co.za</u>></string>
    <string name="please_choose_a_category">Please choose a Category</string>
    <string name="post_question">Post Question</string>
    <string name="answer">Answer</string>
    <string name="comment">Comment</string>
    <string name="post_image">Post Image</string>
    <string name="title">Type your Question</string>
    <string name="description">Provide more details</string>
    <string name="feedback">Feedback</string>
    <string name="acquire_knowledge">You Can Browse Answers And See How Other People Tackle Questions, Put Their Perspective On Same Interest/Topics.</string>
    <string name="acquire_knowledge_heading">ACQUIRE KNOWLEDGE</string>
    <string name="read_your_e_books_heading">READ YOUR E-BOOKS</string>
    <string name="ask_questions_heading">ASK QUESTIONS</string>
    <string name="ask_questions">To Make Your Learning Experience Easier And Fun.You Want Someone On Standby To Answer Your Questions Whenever You Encounter Challenges.</string>
    <string name="cput">Cape Peninsula University of Technology</string>
    <string name="cut">Central University of Technology</string>
    <string name="dut">Durban University of Technology</string>
    <string name="mut">Mangosuthu University of Technology</string>
    <string name="nmu">Nelson Mandela University</string>
    <string name="nwu">North-West University</string>
    <string name="ru">Rhodes University</string>
    <string name="smhsu">Sefako Makgatho Health Sciences University</string>
    <string name="spu">Sol Plaatje University</string>
    <string name="su">Stellenbosch University</string>
    <string name="tut">Tshwane University of Technology</string>
    <string name="uct">University of Cape Town</string>
    <string name="ufh">University of Fort Hare</string>
    <string name="uj">University of Johannesburg</string>
    <string name="ukzn">University of KwaZulu-Natal</string>
    <string name="ul">University of Limpopo</string>
    <string name="um">University of Mpumalanga</string>
    <string name="up">University of Pretoria</string>
    <string name="unisa">University of South Africa</string>
    <string name="ufs">University of the Free State</string>
    <string name="uwc">University of the Western Cape</string>
    <string name="wits">University of the Witwatersrand</string>
    <string name="venda">University of Venda</string>
    <string name="uz">University of Zululand</string>
    <string name="vut">Vaal University of Technology</string>
    <string name="wsu">Walter Sisulu University</string>
    <string name="let_us_feed_your_brain">Let Us Feed Your Brain</string>
    <string name="empty_news_feed">Sorry there is no content to be shown, Click on the button bellow to ask a question</string>
    <string name="be_the_first_to_ask_a_question">Be the first to ask a question</string>
    <string name="ask">ask</string>
    <string name="empty_posts">It appears you have not posted anything yet, start posting today</string>
    <string name="boost_your_knowledge">Browse questions and answers of other students,organized into your interest to help you boost your knowledge</string>
    <string name="boost_your_knowledge_heading">BOOST YOUR KNOWLEDGE</string>
    <string name="co_learning">Sesyme is a question and answer application for university students.</string>
    <string name="co_learning_platform">CO-LEARNING PLATFORM</string>
    <string name="config_scheme">https</string>
    <string name="config_host">sesyme.com</string>
    <string name="Cancel">Cancel</string>
    <string name="share">Share</string>
    <string name="be_the_first_to_reply">Be the first to reply</string>
    <string name="request_call">Request Call</string>
    <string name="was_this_answer_helpful">Was this answer helpful?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="like">Like</string>
    <string name="reply">Reply</string>
    <string name="_0_replies">0 replies</string>
    <string name="error_loading_image">Error Loading Image</string>
    <string name="write_something_about_yourself">Write something about yourself</string>
    <string name="save">save</string>
    <string name="personal_details">Personal Details</string>
</resources>