<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="50dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#f2f2f2">

            <RelativeLayout
                android:id="@+id/banner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/edit_profile_text_view"
                    style="@android:style/Widget.Button.Toggle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/cover_image_profile"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="24dp"
                    android:background="@drawable/button_follow"
                    android:gravity="center"
                    android:maxHeight="36dp"
                    android:minHeight="32dp"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:text="@string/edit_profile"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/cover_image_profile"
                    android:layout_width="match_parent"
                    android:layout_height="160dp"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/leee"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/verify_email_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/edit_profile_text_view"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="24dp"
                    android:gravity="center"
                    android:text="@string/verify_email"
                    android:textAlignment="center"
                    android:textColor="@color/iconsColor"
                    android:textSize="16sp"
                    android:visibility="gone" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_image"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="85dp"
                    android:background="@drawable/img" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rlUserP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/banner"
                android:paddingTop="4dp">

                <EditText
                    android:id="@+id/bio_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:gravity="center"
                    android:maxLines="3"
                    android:paddingLeft="16dp"
                    android:paddingTop="15dp"
                    android:paddingBottom="5dp"
                    android:maxLength="100"
                    android:paddingRight="16dp"
                    android:textStyle="italic"
                    android:layout_below="@+id/university_profile"
                    android:textColor="@color/context_textColor"
                    android:inputType="textShortMessage|textMultiLine"
                    tools:ignore="Autofill,LabelFor" />

                <LinearLayout
                    android:id="@+id/lUserFollows"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/bio_profile"
                    android:layout_marginTop="20dp"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/answers_layout_profile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/number_of_answers"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:focusable="true"
                            android:text="@string/zero"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/following_text_view_profile"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="4dp"
                            android:text="@string/answers"
                            android:textAllCaps="true"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/questions_layout_profile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="68dp">

                        <TextView
                            android:id="@+id/number_of_questions"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/zero"
                            android:textColor="@color/black"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/tvFollowers"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="9dp"
                            android:text="@string/questions"
                            android:textAllCaps="true"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:id="@+id/name_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:text="@string/username"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/affiliation_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/name_profile"
                    android:layout_alignParentStart="true"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:text="@string/course"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/university_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/affiliation_profile"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/manage_interests_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/lUserFollows"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="20dp"
                    android:paddingLeft="16dp"
                    android:paddingTop="20dp"
                    android:paddingRight="16dp"
                    android:paddingBottom="20dp"
                    android:text="@string/manage_interests"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/invite_text_view_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/manage_interests_text_view"
                    android:layout_alignParentStart="true"
                    android:paddingLeft="16dp"
                    android:paddingTop="20dp"
                    android:paddingRight="16dp"
                    android:paddingBottom="20dp"
                    android:text="@string/invite_friends"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/feedback"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/invite_text_view_profile"
                    android:layout_alignParentStart="true"
                    android:paddingLeft="16dp"
                    android:paddingTop="20dp"
                    android:paddingRight="16dp"
                    android:paddingBottom="20dp"
                    android:text="@string/feedback"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/settings_text_view_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/feedback"
                    android:layout_alignParentStart="true"
                    android:paddingLeft="16dp"
                    android:paddingTop="20dp"
                    android:paddingRight="16dp"
                    android:paddingBottom="20dp"
                    android:text="@string/settings"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/logout_text_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/settings_text_view_profile"
                    android:layout_alignParentStart="true"
                    android:paddingLeft="16dp"
                    android:paddingTop="20dp"
                    android:paddingRight="16dp"
                    android:paddingBottom="20dp"
                    android:text="@string/logout"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_alignTop="@+id/manage_interests_text_view"
                    android:layout_marginStart="-21dp"
                    android:layout_marginEnd="-21dp"
                    android:background="@color/colorAccent" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_below="@id/manage_interests_text_view"
                    android:background="@color/colorAccent" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_below="@id/invite_text_view_profile"
                    android:background="@color/colorAccent" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_below="@id/feedback"
                    android:background="@color/colorAccent" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_below="@id/settings_text_view_profile"
                    android:background="@color/colorAccent" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_below="@id/logout_text_profile"
                    android:background="@color/colorAccent" />
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>


    <Button
        android:id="@+id/save_bio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bt_ui"
        android:text="@string/save"
        android:textColor="@color/white"
        android:visibility="gone" />
</RelativeLayout>